# the-own-lab

./: .claude-code-statusline.json  .gitignore  .prettierignore  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  astro.config.ts  claude_harness_agent.ipynb  commitlint.config.js  data.json  esbuild.config.mjs  eslint.config.mjs  index.js  lefthook.yml  main.py  manifest.json  meta.json  mise.toml  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  styles.css  tsconfig.json
.agents/plugins/: marketplace.json
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
NotForgetList/: ContentView.swift
NotForgetList.xcodeproj/: project.pbxproj
NotForgetList.xcworkspace/: contents.xcworkspacedata
NotForgetList/NotForgetList/: NotForgetListApp.swift
NotForgetList/NotForgetList.xcodeproj/: project.pbxproj
apps/: CLAUDE.md
apps/browser/: electron-builder.yml  package.json  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json  vite.config.ts
apps/never-forget-list/: project.json
apps/obsidian-second-brain/: data.json  esbuild.config.mjs  package.json  styles.css
apps/open-codex/: project.json
commands/: develop.md  learn.md  plan.md
docs/: CLAUDE.md
hooks/: hooks.json
learn/: CLAUDE.md
learn/harness-agent/: claude_harness_agent.ipynb  project.json  pyproject.toml
scripts/: CLAUDE.md
src/: config.ts  content.config.ts  env.d.ts  input.ts  layout.ts  main.ts  settings.ts  theme.ts  types.ts
templates/: ADR.md
test/: layout.test.ts
(+376 files in other folders)
