[project]
name = "210-harness-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pathlib>=1.0.1",
]

[dependency-groups]
dev = [
    "anthropic>=0.89.0",
    "ipykernel>=7.2.0",
    "pathlib>=1.0.1",
    "python-dotenv>=1.2.2",
]
